<resources>
    <string name="app_name">Legend</string>
    <string name="creditsText">Faizu Adam 2022</string>
    <string name="startText">PUSH ANYWHERE TO START</string>
    <string name="standardButtonText">Standard</string>
    <string name="bossRushButtonText">Boss Rush</string>
    <string name="reversalButtonText">Reversal</string>
    <string name="standardTextDesc">This is the standard way to play the game. Create a team of four heroes to face off against an adversary of your choosing.</string>
    <string name="bossRushTextDesc">This is the advanced way to play the game. Like the standard mode, create a team of four heroes to fight with. The difference is you will face all the bosses in sequential order. No breaks allowed.</string>
    <string name="reversalTextDesc">This is an alternate way to play the game. Choose one of the four villainous foes to control and face off against the heroes. [Coming Soon]</string>
    <string name="empButton">EMP</string>
    <string name="saiButton">SNT</string>
    <string name="encButton">ENC</string>
    <string name="sagButton">SGE</string>
    <string name="pirButton">PIR</string>
    <string name="check1">P1</string>
    <string name="check2">P2</string>
    <string name="check3">P3</string>
    <string name="check4">P4</string>
    <string name="confirmButton">CONFIRM</string>
    <string name="cancelButton">CANCEL</string>
    <string name="empText">\n Class: Emperor \n Role: Defender \n\n The wise rulers of \n nations and charismatic \n warriors who fight for \n what they believe in. \n These heroes protect and \n embolden their comrades \n to survive even the \n harshest battles. \n\n Recommended for \n Beginners</string>
    <string name="saiText">\n Class: Saint \n Role: Healer \n\n Maidens blessed by the \n higher powers who \n fight for justice. \n Compassionate and gentle \n with their allies while \n harsh to those deemed \n evil. Absorb dark energy \n from enemies and convert \n it into healing for the \n team. \n\n Recommended for All</string>
    <string name="encText">\n Class: Enchantress \n Role: Support \n\n Serene dancers that \n channel the power of \n rituals and the \n Arcana in a spectacle \n performance. These \n mystics reveal their \n cards to cause various \n effects or dance to tap \n into celestial powers. \n\n Recommended for All</string>
    <string name="sagText">\n Class: Sage \n Role: Attacker \n\n Scholars who have poured \n over hundreds of tomes \n in pursuit of magic. \n These clever sorcerers \n have mastered all fields \n of magic both natural \n and forbidden. Cast \n lower level spells to \n mix them into stronger \n devastating calamities. \n\n Recommended for \n Beginners</string>
    <string name="pirText">\n Class: Pirate \n Role: Attacker \n\n Masters of the sea that \n carry their own honor \n code. \"Anything goes \n when fighting traitors, \n monsters, and other \n pirates\". These rough \n and tumble swashbucklers \n get things done by \n damaging weakened foes. \n\n\ Recommended for Experts</string>
    <string name="empStats">\n Class: Emperor \n Role: Defender \n\n\ HP: 800 \n MP: 100 \n ATK: 400 \n MATK: 100 \n DEF: 600 \n MDEF: 400 \n SPD: 100</string>
    <string name="saiStats">\n Class: Saint \n Role: Healer \n\n\ HP: 400 \n MP: 300 \n ATK: 400 \n MATK: 300 \n DEF: 300 \n MDEF: \500 \n SPD: 300</string>
    <string name="encStats">\n Class: Enchantress \n Role: Support \n\n\ HP: 100 \n MP: 400 \n ATK: 200 \n MATK: 500 \n DEF: 300 \n MDEF: 500 \n SPD: 500</string>
    <string name="sagStats">\n Class: Sage \n Role: Attacker \n\n\ HP: 300 \n MP: 500 \n ATK: 200 \n MATK: 700 \n DEF: 300 \n MDEF: 300 \n SPD: 200</string>
    <string name="pirStats">\n Class: Pirate \n Role: Attacker \n\n\ HP: 400 \n MP: 200 \n ATK: 700 \n MATK: 200 \n DEF: 400 \n MDEF: 200 \n SPD: 400</string>
    <string name="boss1Button">Shae D. - The Sinisister</string>
    <string name="boss2Button">Miss Lead - Matriarch of the O Men</string>
    <string name="boss3Button">Ruhtra - Fallen King of the Round</string>
    <string name="boss4Button">Den Mo - The Calamitous Fiend</string>
    <string name="boss1Text">The shunned Sister of the Grand Temple. Because she turned her back on the faith they cursed her to this appearance. Not very powerful as a sister but after her transformation she managed to become something of a threat.</string>
    <string name="boss2Text">A deranged cult leader who created her following by kidnapping children and raising them as her own. Once she was a respectable mage, but the loss of her son caused her to go mad. Her mastery of magic and illusions have led to the fall of the many who challenged her. </string>
    <string name="boss3Text">Once the King and leader of his order of knights, Arthur was an honorable person. Due to conspiracy and a coup his entire Kingdom fell into ruin and all his men executed. His spirit lingered and had taken the name Ruhtra seeking to pull unfortunate souls to the depths of his forlorn castle.</string>
    <string name="boss4Text">The Demon King that had dropped the world into an endless darkness. A ruthless and cunning monster who clawed his way to the top on his own merits. Extremely dangerous and only who have been blessed have challenged him.</string>
    <string name="boss1Name">Shae D.</string>
    <string name="boss2Name">Miss Lead</string>
    <string name="boss3Name">Ruhtra</string>
    <string name="boss4Name">Den Mo</string>
    <string name="cancelButton2">CANCEL</string>
    <string name="confirmButton2">CONFIRM</string>
    <string name="confirmButtonAlt">ENGAGE</string>
    <string name="attackButton">ATTACK</string>
    <string name="defendButton">DEFEND</string>
    <string name="AttackDesc">\ Swing down on a foe with the \n equipped weapon.</string>
    <string name="DefendDesc">\ Guard oneself from incoming \n attacks.</string>
    <string name="nameTesting1">Pirate</string>
    <string name="nameTesting2">Sage</string>
    <string name="nameTesting3">Saint</string>
    <string name="nameTesting4">Enchantress</string>
    <string name="nameTesting5">Emperor</string>
    <string name="victory">Victory</string>
    <string name="defeated">Defeated</string>
    <string name="modePlayed">Mode:</string>
    <string name="bossFought">Boss:</string>
    <string name="party1">P1:</string>
    <string name="party2">P2:</string>
    <string name="party3">P3:</string>
    <string name="party4">P4:</string>
    <string name="takenTurns">Turns Taken:</string>
    <string name="modeName1">Standard</string>
    <string name="modeName2">Boss Rush</string>
    <string name="modeName3">Reversal</string>
    <string name="empName1">Galahad the Emperor</string>
    <string name="empName2">Percival the Emperor</string>
    <string name="empName3">Aglovale the Emperor</string>
    <string name="empName4">Tristan the Emperor</string>
    <string name="saiName1">Holly the Saint</string>
    <string name="saiName2">Jeanne the Saint</string>
    <string name="saiName3">Mary the Saint</string>
    <string name="saiName4">Noelle the Saint</string>
    <string name="encName1">Sephira the Enchantress</string>
    <string name="encName2">Hestia the Enchantress</string>
    <string name="encName3">Medea the Enchantress</string>
    <string name="encName4">Ishtar the Enchantress</string>
    <string name="sagName1">Gelid the Sage</string>
    <string name="sagName2">Ignis the Sage</string>
    <string name="sagName3">Gaia the Sage</string>
    <string name="sagName4">Zephyr the Sage</string>
    <string name="pirName1">Regina the Pirate</string>
    <string name="pirName2">Titania the Pirate</string>
    <string name="pirName3">Minerva the Pirate</string>
    <string name="pirName4">Katarina the Pirate</string>
    <string name="empSkill1">Cover</string>
    <string name="empSkill2">Lead the Charge</string>
    <string name="empSkill3">Hold the Line</string>
    <string name="empSkill4">Reinforcements are Coming</string>
    <string name="empSkill5">Overcome Weakness</string>
    <string name="empSkill6">Berserker</string>
    <string name="empSkill7">Stand United</string>
    <string name="empOversoul">Going Home Alive</string>
    <string name="empSkill1Desc">\ Show your compassionate side. \n Take damage in place of an \n ally. \n\n Cost: 7 MP</string>
    <string name="empSkill2Desc">\ Lead by example by striking the \n enemy first. Increases aggro \n and deals physical damage. \n\n Cost: 12 MP</string>
    <string name="empSkill3Desc">\ Command your troops to take a \n defensive formation. Increases \n all allies physical defense. \n\n Cost: 15 MP</string>
    <string name="empSkill4Desc">\ Assure your soldiers that \n backup is on the way. \n Increases all allies magical \n defense. \n\n Cost: 15 MP</string>
    <string name="empSkill5Desc">\ Let out a battle cry to regain \n control of your own body. The \n resounding shockwave strikes \n fear into the enemy. Attempt to \n apply current ailment to the \n enemy while removing your own. \n\n Cost: 30 MP</string>
    <string name="empSkill6Desc">\ Make a powerful swing with \n reckless abandon. Deals \n physical damage to the enemy \n while also damaging yourself. \n\n Cost: 7 MP</string>
    <string name="empSkill7Desc">\ Unite your troops to cover \n their fellow man. Greatly \n increase all allies defenses \n but lowers all offenses. \n\n Cost: 19 MP</string>
    <string name="empOversoulDesc">\ Rally your soldiers with words \n of glory and honor. Remind them \n of what they fight for. Makes \n all allies impervious to enemy \n attacks.  \n\n This skill can only be used \n once per battle.</string>
    <string name="saiSkill1">Holy Smite</string>
    <string name="saiSkill2">Love thy Neighbor</string>
    <string name="saiSkill3">Holy Water</string>
    <string name="saiSkill4">Divine Intervention</string>
    <string name="saiSkill5">Blessing</string>
    <string name="saiSkill6">Blessed Bells</string>
    <string name="saiSkill7">Benediction</string>
    <string name="saiOversoul">Heaven\'s Eyes</string>
    <string name="saiSkill1Desc">\ Calls upon the sacred beings \n to dish out punishment. Deals \n hybrid damage to drain the \n enemy of their health. \n\n Cost: 7 MP</string>
    <string name="saiSkill2Desc">\ Share what you have with your \n comrades. Give a percentage \n of your current health to all \n allies. \n\n Cost: 3% HP</string>
    <string name="saiSkill3Desc">\ Share blessed waters with those \n in need. Cures status ailments \n and/or revives an ally. \n\n Cost: 28 MP</string>
    <string name="saiSkill4Desc">\ Calls upon the sacred powers \n for protection. Redirects enemy \n aggro occasionally. \n\n Cost: 14 MP</string>
    <string name="saiSkill5Desc">\ Grants a blessing to all party \n members by praying for them. \n Grants all allies regen. \n\n Cost: 7 MP</string>
    <string name="saiSkill6Desc">\ Rings the holy bells to cleanse \n the body and soul. Removes 1 \n debuff from all allies. \n\n Cost: 14 MP</string>
    <string name="saiSkill7Desc">\ A fervent prayer meant to \n receive the blessing of the \n heavens. Give a percentage of \n your current health to restore \n MP. \n\n Cost: 60% HP</string>
    <string name="saiOversoulDesc">\ Channel the scared powers into \n you. Let your body become a \n vessel for the divine. Enhances \n all skills. \n\n This skill can only be used \n once per battle.</string>
    <string name="saiSkill1Alt">Divine Wrath</string>
    <string name="saiSkill2Alt">Peace Be Upon You</string>
    <string name="saiSkill3Alt">Holy Well</string>
    <string name="saiSkill4Alt">Fate Rewritten</string>
    <string name="saiSkill5Alt">Consecration</string>
    <string name="saiSkill6Alt">Sacred Chimes</string>
    <string name="saiSkill7Alt">Graceful Litany</string>
    <string name="saiOversoulAlt">Heaven\'s Eyes</string>
</resources>