<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/leg_black">

    <TextView
        android:id="@+id/selectedMode"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/standardButtonText"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/leg_yellow"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modeDescription"
        android:layout_width="350dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/summer_pixel_22_normal"
        android:text="@string/standardTextDesc"
        android:textColor="@color/leg_sand"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedMode" />

    <Button
        android:id="@+id/standardButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/standardButtonText"
        android:backgroundTint="@color/leg_red"
        android:textColor="@color/leg_sand"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modeDescription" />

    <Button
        android:id="@+id/bossRushButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/bossRushButtonText"
        android:backgroundTint="@color/leg_teal"
        android:textColor="@color/leg_gold"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standardButton" />

    <Button
        android:id="@+id/reversalButton"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/reversalButtonText"
        android:backgroundTint="@color/leg_teal"
        android:textColor="@color/leg_gold"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bossRushButton" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/leg_metal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reversalButton"
        app:srcCompat="@android:drawable/ic_media_play"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>