<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/leg_black">

    <TextView
        android:id="@+id/bossTitle"
        android:layout_width="375dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/boss1Button"
        android:textAlignment="center"
        android:textColor="@color/leg_yellow"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boss1Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/leg_red"
        android:fontFamily="@font/old_english_gothic_pixel_bold"
        android:text="@string/boss1Button"
        android:textColor="@color/leg_sand"
        android:textSize="16sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bossDesc" />

    <Button
        android:id="@+id/boss2Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_teal"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/boss2Button"
        android:textColor="@color/leg_gold"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boss1Button" />

    <Button
        android:id="@+id/boss3Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_teal"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/boss3Button"
        android:textColor="@color/leg_gold"
        android:textSize="12sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boss2Button" />

    <Button
        android:id="@+id/boss4Button"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_teal"
        android:fontFamily="@font/old_english_gothic_pixel_normal"
        android:text="@string/boss4Button"
        android:textColor="@color/leg_gold"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boss3Button" />

    <TextView
        android:id="@+id/bossDesc"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/summer_pixel_22_normal"
        android:text="@string/boss1Text"
        android:textColor="@color/leg_sand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bossTitle" />

    <ImageButton
        android:id="@+id/forwardButton3"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_metal"
        app:layout_constraintStart_toEndOf="@+id/homeButton2"
        app:layout_constraintTop_toBottomOf="@+id/boss4Button"
        app:srcCompat="@android:drawable/ic_media_next"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/homeButton2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_metal"
        app:layout_constraintStart_toEndOf="@+id/backButton2"
        app:layout_constraintTop_toBottomOf="@+id/boss4Button"
        app:srcCompat="@android:drawable/btn_star"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/backButton2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/leg_metal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boss4Button"
        app:srcCompat="@android:drawable/ic_media_previous"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>